fiz nosso time, kits semanais. Arrumei com Davi a Responsividade, Botão comprar.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style-prato-pronto.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
-    <title>Home</title>
+    <title>4FOOD</title>
 
 </head>
 
@@ -17,12 +17,11 @@
             <img class="imagem-logo" src="./img/4food-cut-so-logo.png">
             <img class="imagem-logo" src="./img/4food-nome.png">
         </div>
-
-        <a class="formata-link-cor" href="./index.html">Categorias</a>
-        <a class="formata-link-cor" href="./faleconosco.html">Fale Conosco</a>
-        <a class="formata-link-cor" href="">Nosso Time</a>
-
-
+        <div class="links-header">
+            <a class="formata-link-cor" href="./index.html">Categorias</a>
+            <a class="formata-link-cor" href="./faleconosco.html">Fale Conosco</a>
+            <a class="formata-link-cor" href="">Nosso Time</a>
+        </div>
         <div class="label-input-botao">
             <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome">
@@ -37,36 +36,45 @@
         <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
         <div class="container">
-            <h2>Pratos Prontos</h2>
-            <a href="./prato-pronto.html"><img class="foto-categorias"
-                    src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
-            </a>
-        </div>
-        <div class="container">
-            <h2>Padaria</h2>
-            <a href="./padaria.html"><img class="foto-categorias" src="./Fotos categorias/Padaria/Foto padaria.jpg"
-                    alt="Padaria">
-            </a>
-        </div>
-        <div class="container">
-            <h2>Açougue</h2>
-            <a href="./açougue.html"><img class="foto-categorias" src="./Fotos categorias/Açougue/foto açougue.jpg"
-                    alt="açougue">
-            </a>
-        </div>
+            <span>
+                <a href="./prato-pronto.html"><img class="foto-main" src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
+                </a>
+                <p>Pratos Prontos</p>
+            </span>
 
-        <div class="container"></div>
-        <h2>Bebidas</h2>
-        <a href="./Bebidas.html"><img class="foto-categorias" src="./Fotos categorias/Bebidas/foto bebidas.jpg"
-                alt="Bebidas">
-        </a>
-        </div>
+            <span>
+                <a href="./padaria.html"><img class="foto-main" src="./Fotos categorias/Padaria/Foto padaria.jpg"
+                        alt="Padaria">
+                </a>
+                <p>Padaria</p>
+            </span>
 
-        <div class="container">
-            <h2>Hortifruti</h2>
-            <a href="./Hortifruti.html"><img class="foto-categorias"
-                    src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
-            </a>
+            <span>
+                <a href="./açougue.html"><img class="foto-main" src="./Fotos categorias/Açougue/foto açougue.jpg"
+                        alt="açougue">
+                </a>
+                <p>Açougue</p>
+            </span>
+
+            <span>
+                <a href="./Bebidas.html"><img class="foto-main" src="./Fotos categorias/Bebidas/foto bebidas.jpg"
+                        alt="Bebidas">
+                </a>
+                <p>Bebida</p>
+            </span>
+
+            <span>
+                <a href="./Hortifruti.html"><img class="foto-main" src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
+                </a>
+                <p>Hortifruti</p>
+            </span>
+
+            <span>
+                <a href="./kits-promos.html"><img class="foto-main" src="./Fotos categorias/promocoes/kit 3.jpg" alt="Hortifruti">
+                </a>
+                <p>Kits Semanais</p>
+            </span>
+
         </div>
 
     </main>
@@ -77,23 +85,15 @@
     <footer>
         <div class="footer-left">
             <p class="text-left">Redes Sociais</p>
-
-            <a href="https://www.facebook.com"><img class="tamanho-logos" src="./img/facebook logo.png"></a>
-
-            <a href="https://www.instagram.com"><img class="tamanho-logos" src="./img/logo insta.png"></a>
-
-            <a href="https://www.twitter.com"><img class="tamanho-logos" src="./img/logo twitter.png"></a>
-
-            <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
-
+            <a href="https://www.facebook.com" target="_blank"><img id="tamanho-logos-footer" src="./img/facebook logo.png"></a>
+            <a href="https://www.instagram.com" target="_blank"><img id="tamanho-logos-footer" src="./img/logo insta.png"></a>
+            <a href="https://www.twitter.com" target="_blank"><img id="tamanho-logos-footer" src="./img/logo twitter.png"></a>
+            <a href="https://web.whatsapp.com" target="_blank"><img id="tamanho-logos-footer" src="./img/whats logo.png"></a>
         </div>
         <div class="footer-right">
             <p class="text-right">Formas de Pagamento</p>
-
-            <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
-
+            <img src="./img/logo pagamento.jpg" id="tamanho-img-pagamento" alt="Formas de Pagamento">
         </div>
-
     </footer>
 
     <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
