--- a/nossotime.html
+++ b/nossotime.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style-categorias.css">
+    <link rel="stylesheet" type="text/css" href="./style-nossotime.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
-    <title>4FOOD - Bebidas</title>
+    <title>4FOOD - Nosso Time</title>
 
 </head>
 
@@ -33,62 +33,27 @@
         </div>
     </header>
 
-
     <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
     <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
     <main class="cor-fundo">
+        <div class="formata-imagens">
+            <div>
+                <img class="tamanho-imagem-aline" src="./img/mari.jpg">
+                <h3>Aline</h3>
+            </div>
 
-        <img src="/Fotos categorias/Bebidas/refrigerantes diversos.jpg" alt="Bebidas">
+            <div>
+                <img class="tamanho-imagem-davi" src="./img/davi-com fundo.jpeg">
+                <h3>Davi</h3>
+            </div>
 
-        <table>
-            <tr>
-                <td>Coca-Cola / Fanta / Guarana / Schweppes</td>
-            </tr>
-            <tr>
-                <td>R$4,00 Lata </td>
-            </tr>
-        </table>
-
-        <img src="/Fotos categorias/Bebidas/sucos diversos.jpg" alt="Bebidas">
-
-        <table>
-            <tr>
-                <td>Su-Fresh / Del-vale / Do-bem / Maguari</td>
-            </tr>
-            <tr>
-                <td>R$6,00 - 500ml </td>
-            </tr>
-
-        </table>
-
-        <img src="/Fotos categorias/Bebidas/cervejas diversas.jpg" alt="Bebidas">
-
-        <table>
-            <tr>
-                <td>Itaipava / Skol / Heineken / Budweizer / Brahma</td>
-            </tr>
-            <tr>
-                <td>R$5,00-Lata / R$8,00-Garrafa </td>
-            </tr>
-
-        </table>
-
-        <img src="/Fotos categorias/Bebidas/agua.jpg" alt="Bebidas">
-
-        <table>
-            <tr>
-                <td>Agua mineral</td>
-            </tr>
-            <tr>
-                <td>R$2,00 s/gás | R$2,70 c/gás </td>
-            </tr>
-
-        </table>
-
-
+            <div>
+                <img class="tamanho-imagem-pri" src="./img/pri.png">
+                <h3>Priscilla</h3>
+            </div>
+        </div>
     </main>
-
 
     <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
     <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
@@ -111,6 +76,8 @@
     <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
     <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
+
 </body>
+
 
 </html>
