--- a/faleconosco.html
+++ b/faleconosco.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4FOOD</title>
     <link rel="stylesheet" type="text/css" href="./style-index.css">
     <link rel="stylesheet" type="text/css" href="./style-faleconosco.css">
+    <title>4FOOD - Fale Conosco</title>
 </head>
 
 <body>
@@ -17,10 +17,11 @@
             <img class="imagem-logo" src="./img/4food-nome.png">
         </div>
 
-        <a class="formata-link-cor" href="./index.html">Categorias</a>
-        <a class="formata-link-cor" href="./faleconosco.html">Fale Conosco</a>
-        <a class="formata-link-cor" href="">Nosso Time</a>
-
+        <div class="links-header">
+            <a class="formata-link-cor" href="./index.html">Categorias</a>
+            <a class="formata-link-cor" href="./faleconosco.html">Fale Conosco</a>
+            <a class="formata-link-cor" href="./nossotime.html">Nosso Time</a>
+        </div>
 
         <div class="label-input-botao">
             <label for="nome">Nome</label>
@@ -61,24 +62,17 @@
 <footer>
     <div class="footer-left">
         <p class="text-left">Redes Sociais</p>
-
-        <a href="https://www.facebook.com"><img class="tamanho-logos-footer" src="./img/facebook logo.png"></a>
-
-        <a href="https://www.instagram.com"><img class="tamanho-logos-footer" src="./img/logo insta.png"></a>
-
-        <a href="https://www.twitter.com"><img class="tamanho-logos-footer" src="./img/logo twitter.png"></a>
-
-        <a href="https://web.whatsapp.com"><img class="tamanho-logos-footer" src="./img/whats logo.png"></a>
-
+        <a href="https://www.facebook.com" target="_blank"><img id="tamanho-logos-footer" src="./img/facebook logo.png"></a>
+        <a href="https://www.instagram.com" target="_blank"><img id="tamanho-logos-footer" src="./img/logo insta.png"></a>
+        <a href="https://www.twitter.com" target="_blank"><img id="tamanho-logos-footer" src="./img/logo twitter.png"></a>
+        <a href="https://web.whatsapp.com" target="_blank"><img id="tamanho-logos-footer" src="./img/whats logo.png"></a>
     </div>
     <div class="footer-right">
         <p class="text-right">Formas de Pagamento</p>
-
-        <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
-
+        <img src="./img/logo pagamento.jpg" id="tamanho-img-pagamento" alt="Formas de Pagamento">
     </div>
-
 </footer>
+
 
 <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
 <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
