--- a/kits-promos.html
+++ b/kits-promos.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
-    <link rel="stylesheet" type="text/css" href="./style-açougue.css">
-    <title>4FOOD - Açougue</title>
+    <link rel="stylesheet" type="text/css" href="./style-kitpromo.css">
+    <title>4FOOD - Kits Semanais</title>
 
 </head>
 
@@ -17,13 +17,11 @@
             <img class="imagem-logo" src="./img/4food-cut-so-logo.png">
             <img class="imagem-logo" src="./img/4food-nome.png">
         </div>
-
         <div class="links-header">
             <a class="formata-link-cor" href="./index.html">Categorias</a>
             <a class="formata-link-cor" href="./faleconosco.html">Fale Conosco</a>
-            <a class="formata-link-cor" href="./nossotime.html">Nosso Time</a>
+            <a class="formata-link-cor" href="">Nosso Time</a>
         </div>
-
         <div class="label-input-botao">
             <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome">
@@ -39,7 +37,7 @@
 
     <main class="cor-fundo">
 
-        <table>
+        <table class="container-kits">
             <tr>
                 <th>Produto</th>
                 <th>Descrição</th>
@@ -48,54 +46,34 @@
             </tr>
 
             <tr>
-                <td><img class="foto-carne1" src="./Fotos categorias/Açougue/fraldinha.jpg" alt="açougue"></td>
-                <td>Fraldinha</td>
-                <td>R$20,00kg </td>
+                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kit 1.jpg" alt="kits"></td>
+                <td>Kit 7 Marmitas</td>
+                <td>R$90,00 </td>
                 <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
-                <td><img class="foto-carne2" src="./Fotos categorias/Açougue/lombo suino.jpg" alt="açougue"></td>
-                <td>Lombo Suino</td>
-                <td>R$18,90kg </td>
+                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kit 2.jpg" alt="kits"></td>
+                <td>Kit 10 Marmitas</td>
+                <td>R$125,00</td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
-                <td><img class="foto-carne" src="./Fotos categorias/Açougue/medalhão de mile minhon.jpg" alt="açougue">
+                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kit 4.jpg" alt="kits">
                 </td>
-                <td>Medalhão Filé Mignon</td>
-                <td>R$24,99kg </td>
+                <td class="centraliza">Kit 14 Marmitas</td>
+                <td class="centraliza">R$185,00 </td>
+                <td class="centraliza"><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
-                <td><img class="foto-carne" src="./Fotos categorias/Açougue/pernil.jpg" alt="açougue"></td>
-                <td>Pernil</td>
-                <td>R$23,90kg </td>
+                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kits foto principal.jpg" alt="kits"></td>
+                <td class="centraliza">Kit 20 Marmitas</td>
+                <td class="centraliza">R$275,00 </td>
+                <td class="centraliza"><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
-            <tr>
-                <td><img class="foto-carne" src="./Fotos categorias/Açougue/picanha.jpg" alt="açougue"></td>
-                <td>Picanha</td>
-                <td>R$26,90kg </td>
-            </tr>
-
-            <tr>
-                <td> <img class="foto-carne" src="./Fotos categorias/Açougue/frango inteiro.jpg" alt="açougue"></td>
-                <td>Frango inteiro</td>
-                <td>R$16,98kg </td>
-            </tr>
-
-            <tr>
-                <td><img class="foto-carne" src="./Fotos categorias/Açougue/peito de frango.jpg" alt="açougue"></td>
-                <td>Peito de frango</td>
-                <td>R$18,90kg </td>
-            </tr>
-
-            <tr>
-                <td><img class="foto-carne" src="./Fotos categorias/Açougue/couxa de frango.jpg" alt="açougue"></td>
-                <td>Coxa de frango</td>
-                <td>R$16,00kg </td>
-            </tr>
         </table>
 
     </main>
@@ -106,10 +84,14 @@
     <footer>
         <div class="footer-left">
             <p class="text-left">Redes Sociais</p>
-            <a href="https://www.facebook.com" target="_blank"><img id="tamanho-logos-footer" src="./img/facebook logo.png"></a>
-            <a href="https://www.instagram.com" target="_blank"><img id="tamanho-logos-footer" src="./img/logo insta.png"></a>
-            <a href="https://www.twitter.com" target="_blank"><img id="tamanho-logos-footer" src="./img/logo twitter.png"></a>
-            <a href="https://web.whatsapp.com" target="_blank"><img id="tamanho-logos-footer" src="./img/whats logo.png"></a>
+            <a href="https://www.facebook.com" target="_blank"><img id="tamanho-logos-footer"
+                    src="./img/facebook logo.png"></a>
+            <a href="https://www.instagram.com" target="_blank"><img id="tamanho-logos-footer"
+                    src="./img/logo insta.png"></a>
+            <a href="https://www.twitter.com" target="_blank"><img id="tamanho-logos-footer"
+                    src="./img/logo twitter.png"></a>
+            <a href="https://web.whatsapp.com" target="_blank"><img id="tamanho-logos-footer"
+                    src="./img/whats logo.png"></a>
         </div>
         <div class="footer-right">
             <p class="text-right">Formas de Pagamento</p>
