terminado motificações imagens

--- a/Bebidas.html
+++ b/Bebidas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style-categorias.css">
+    <link rel="stylesheet" type="text/css" href="./style-babidas.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
     <title>Home</title>
 
@@ -38,52 +38,40 @@
 
     <main class="cor-fundo">
 
-        <img src="/Fotos categorias/Bebidas/refrigerantes diversos.jpg" alt="Bebidas">
-
+        <div class="container">
         <table>
             <tr>
-                <td>Coca-Cola / Fanta / Guarana / Schweppes</td>
+                <th>Produto</th>
+                <th>Descrição</th>
+                <th>Preço</th>
             </tr>
+
             <tr>
+                <td><img class="tam-refrigerante" src="/Fotos categorias/Bebidas/refrigerantes diversos.jpg" alt="Bebidas"></td>
+                <td>Coca-Cola / Fanta / Guarana / Schweppes</td>
                 <td>R$4,00 Lata </td>
             </tr>
-        </table>
 
-        <img src="/Fotos categorias/Bebidas/sucos diversos.jpg" alt="Bebidas">
-
-        <table>
             <tr>
+                <td><img class="tam-suco" src="/Fotos categorias/Bebidas/sucos diversos.jpg" alt="Bebidas"></td>
                 <td>Su-Fresh / Del-vale / Do-bem / Maguari</td>
-            </tr>
-            <tr>
                 <td>R$6,00 - 500ml </td>
             </tr>
 
-        </table>
-
-        <img src="/Fotos categorias/Bebidas/cervejas diversas.jpg" alt="Bebidas">
-
-        <table>
             <tr>
+                <td><img src="/Fotos categorias/Bebidas/cervejas diversas.jpg" alt="Bebidas"></td>
                 <td>Itaipava / Skol / Heineken / Budweizer / Brahma</td>
-            </tr>
-            <tr>
                 <td>R$5,00-Lata / R$8,00-Garrafa </td>
             </tr>
 
-        </table>
-
-        <img src="/Fotos categorias/Bebidas/agua.jpg" alt="Bebidas">
-
-        <table>
             <tr>
+                <td><img src="/Fotos categorias/Bebidas/agua.jpg" alt="Bebidas"></td>
                 <td>Agua mineral</td>
-            </tr>
-            <tr>
                 <td>R$2,00 s/gás | R$2,70 c/gás </td>
             </tr>
 
         </table>
+        </div>
 
 
     </main>
