--- a/index.html
+++ b/index.html
@@ -37,40 +37,51 @@
         <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
         <div class="container">
-            <h2>Pratos Prontos</h2>
-            <a href="./prato-pronto.html"><img class="foto-categorias"
-                    src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
-            </a>
-        </div>
-        <div class="container">
-            <h2>Padaria</h2>
-            <a href="./padaria.html"><img class="foto-categorias" src="./Fotos categorias/Padaria/Foto padaria.jpg"
-                    alt="Padaria">
-            </a>
-        </div>
-        <div class="container">
-            <h2>Açougue</h2>
-            <a href="./açougue.html"><img class="foto-categorias" src="./Fotos categorias/Açougue/foto açougue.jpg"
-                    alt="açougue">
-            </a>
-        </div>
+            <span>
+                <a href="./prato-pronto.html"><img class="foto-categorias"
+                        src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
+                </a>
+                Pratos Prontos
+            </span>
 
-        <div class="container"></div>
-        <h2>Bebidas</h2>
-        <a href="./Bebidas.html"><img class="foto-categorias" src="./Fotos categorias/Bebidas/foto bebidas.jpg"
-                alt="Bebidas">
-        </a>
-        </div>
+            <span>
+                <a href="./padaria.html"><img class="foto-categorias" src="./Fotos categorias/Padaria/Foto padaria.jpg"
+                        alt="Padaria">
+                </a>
+                Padaria
+            </span>
 
-        <div class="container">
-            <h2>Hortifruti</h2>
-            <a href="./Hortifruti.html"><img class="foto-categorias"
-                    src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
-            </a>
+            <span>
+                <a href="./açougue.html"><img class="foto-categorias" src="./Fotos categorias/Açougue/foto açougue.jpg"
+                        alt="açougue">
+                </a>
+                Açougue
+            </span>
+
+            <span>
+                <a href="./Bebidas.html"><img class="foto-categorias" src="./Fotos categorias/Bebidas/foto bebidas.jpg"
+                        alt="Bebidas">
+                </a>
+                Bebida
+            </span>
+
+            <span>
+                <a href="./Hortifruti.html"><img class="foto-categorias"
+                        src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
+                </a>
+                <p>Hortifruti</p>
+            </span>
+
+            <span>
+                <a href="./Hortifruti.html"><img class="foto-categorias"
+                        src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
+                </a>
+                <p>Kits e Promoções</p>
+            </span>
+
         </div>
 
     </main>
-
     <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
     <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
 
