--- a/açougue.html
+++ b/açougue.html
@@ -38,94 +38,62 @@
 
     <main class="cor-fundo">
 
-        <img class="foto-carne1" src="./Fotos categorias/Açougue/fraldinha.jpg" alt="açougue">
-
+        <div class="container">
         <table>
             <tr>
-                <td>Fraldinha</td>
+                <th>Produto</th>
+                <th>Descrição</th>
+                <th>Preço</th>
             </tr>
+
             <tr>
+                <td><img class="foto-carne1" src="./Fotos categorias/Açougue/fraldinha.jpg" alt="açougue"></td>
+                <td>Fraldinha</td>
                 <td>R$20,00kg </td>
             </tr>
-        </table>
 
-        <img class="foto-carne2" src="./Fotos categorias/Açougue/lombo suino.jpg" alt="açougue">
-
-        <table>
             <tr>
+                <td><img class="foto-carne2" src="./Fotos categorias/Açougue/lombo suino.jpg" alt="açougue"></td>
                 <td>Lombo Suino</td>
-            </tr>
-            <tr>
                 <td>R$18,90kg </td>
             </tr>
-        </table>
 
-        <img class="foto-carne" src="./Fotos categorias/Açougue/medalhão de mile minhon.jpg" alt="açougue">
-
-        <table>
             <tr>
+                <td><img class="foto-carne" src="./Fotos categorias/Açougue/medalhão de mile minhon.jpg" alt="açougue">
+                </td>
                 <td>Medalhão Filé Mignon</td>
-            </tr>
-            <tr>
                 <td>R$24,99kg </td>
             </tr>
-        </table>
 
-        <img class="foto-carne" src="./Fotos categorias/Açougue/pernil.jpg" alt="açougue">
-
-        <table>
             <tr>
+                <td><img class="foto-carne" src="./Fotos categorias/Açougue/pernil.jpg" alt="açougue"></td>
                 <td>Pernil</td>
-            </tr>
-            <tr>
                 <td>R$23,90kg </td>
             </tr>
-        </table>
 
-        <img class="foto-carne" src="./Fotos categorias/Açougue/picanha.jpg" alt="açougue">
-
-        <table>
             <tr>
+                <td><img class="foto-carne" src="./Fotos categorias/Açougue/picanha.jpg" alt="açougue"></td>
                 <td>Picanha</td>
-            </tr>
-            <tr>
                 <td>R$26,90kg </td>
-            </tr>
-        </table>
-
-        <img class="foto-carne" src="./Fotos categorias/Açougue/frango inteiro.jpg" alt="açougue">
-
-        <table>
             <tr>
+                <td> <img class="foto-carne" src="./Fotos categorias/Açougue/frango inteiro.jpg" alt="açougue"></td>
                 <td>Frango inteiro</td>
-            </tr>
-            <tr>
                 <td>R$16,98kg </td>
             </tr>
-        </table>
 
-        <img class="foto-carne" src="./Fotos categorias/Açougue/peito de frango.jpg" alt="açougue">
-
-        <table>
-            <tr>
+           <tr>
+                <td><img class="foto-carne" src="./Fotos categorias/Açougue/peito de frango.jpg" alt="açougue"></td>
                 <td>Peito de frango</td>
-            </tr>
-            <tr>
                 <td>R$18,90kg </td>
             </tr>
-        </table>
 
-        <img class="foto-carne" src="./Fotos categorias/Açougue/couxa de frango.jpg" alt="açougue">
-
-        <table>
             <tr>
-                <td>Couxa de frango</td>
-            </tr>
-            <tr>
+                <td><img class="foto-carne" src="./Fotos categorias/Açougue/couxa de frango.jpg" alt="açougue"></td>
+                <td>Coxa de frango</td>
                 <td>R$16,00kg </td>
             </tr>
         </table>
-
+        </div>
 
     </main>
 
