--- a/açougue.html
+++ b/açougue.html
@@ -47,8 +47,6 @@
                 <th>Produto</th>
                 <th>Descrição</th>
                 <th>Preço</th>
-
-
                 <th>Comprar</th>
 
             </tr>
@@ -64,6 +62,7 @@
                 <td><img class="foto-carne2" src="./Fotos categorias/Açougue/lombo suino.jpg" alt="açougue"></td>
                 <td>Lombo Suino</td>
                 <td>R$18,90kg </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
@@ -71,18 +70,21 @@
                 </td>
                 <td>Medalhão Filé Mignon</td>
                 <td>R$24,99kg </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
                 <td><img class="foto-carne" src="./Fotos categorias/Açougue/pernil.jpg" alt="açougue"></td>
                 <td>Pernil</td>
                 <td>R$23,90kg </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
                 <td><img class="foto-carne" src="./Fotos categorias/Açougue/picanha.jpg" alt="açougue"></td>
                 <td>Picanha</td>
                 <td>R$26,90kg </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
 
             </tr>
 
@@ -91,6 +93,7 @@
                 <td> <img class="foto-carne" src="./Fotos categorias/Açougue/frango inteiro.jpg" alt="açougue"></td>
                 <td>Frango inteiro</td>
                 <td>R$16,98kg </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
 
@@ -101,12 +104,14 @@
                 <td><img class="foto-carne" src="./Fotos categorias/Açougue/peito de frango.jpg" alt="açougue"></td>
                 <td>Peito de frango</td>
                 <td>R$18,90kg </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
                 <td><img class="foto-carne" src="./Fotos categorias/Açougue/couxa de frango.jpg" alt="açougue"></td>
                 <td>Coxa de frango</td>
                 <td>R$16,00kg </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
         </table>
 
