--- a/kits-promos.html
+++ b/kits-promos.html
@@ -46,7 +46,7 @@
             </tr>
 
             <tr>
-                <td class="tamanho-td-tabela"><img class="foto-kit" src="./Fotos categorias/promocoes/kit 1.jpg" alt="kits"></td>
+                <td class="tamanho-td-tabela"><img id="foto-kit1" src="./Fotos categorias/promocoes/kit 1.jpg" alt="kits"></td>
                 <td>Kit 7 Marmitas</td>
                 <td>R$90,00 </td>
                 <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
