add botao de compra

--- a/açougue.html
+++ b/açougue.html
@@ -39,16 +39,12 @@
 
     <main class="cor-fundo">
 
-
-        <div class="container">
-
-        <table>
+        <table class="container-kits">
             <tr>
                 <th>Produto</th>
                 <th>Descrição</th>
                 <th>Preço</th>
                 <th>Comprar</th>
-
             </tr>
 
             <tr>
@@ -85,9 +81,7 @@
                 <td>Picanha</td>
                 <td>R$26,90kg </td>
                 <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
-
             </tr>
-
 
             <tr>
                 <td> <img class="foto-carne" src="./Fotos categorias/Açougue/frango inteiro.jpg" alt="açougue"></td>
@@ -96,11 +90,7 @@
                 <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
-
-           <tr>
-
             <tr>
-
                 <td><img class="foto-carne" src="./Fotos categorias/Açougue/peito de frango.jpg" alt="açougue"></td>
                 <td>Peito de frango</td>
                 <td>R$18,90kg </td>
