--- a/Bebidas.html
+++ b/Bebidas.html
@@ -39,36 +39,40 @@
 
     <main class="cor-fundo">
 
-        <div class="container">
-        <table>
+        <table class="container-kits">
             <tr>
                 <th>Produto</th>
                 <th>Descrição</th>
                 <th>Preço</th>
+                <th>Comprar</th>
             </tr>
 
             <tr>
                 <td><img class="tam-refrigerante" src="/Fotos categorias/Bebidas/refrigerantes diversos.jpg" alt="Bebidas"></td>
                 <td>Coca-Cola / Fanta / Guarana / Schweppes</td>
                 <td>R$4,00 Lata </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
                 <td><img class="tam-suco" src="/Fotos categorias/Bebidas/sucos diversos.jpg" alt="Bebidas"></td>
                 <td>Su-Fresh / Del-vale / Do-bem / Maguari</td>
                 <td>R$6,00 - 500ml </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
                 <td><img src="/Fotos categorias/Bebidas/cervejas diversas.jpg" alt="Bebidas"></td>
                 <td>Itaipava / Skol / Heineken / Budweizer / Brahma</td>
                 <td>R$5,00-Lata / R$8,00-Garrafa </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
                 <td><img src="/Fotos categorias/Bebidas/agua.jpg" alt="Bebidas"></td>
                 <td>Agua mineral</td>
                 <td>R$2,00 s/gás | R$2,70 c/gás </td>
+                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
         </table>
