arrumei tabelas de todos os produtos para centralizar

--- a/Bebidas.html
+++ b/Bebidas.html
@@ -48,31 +48,31 @@
             </tr>
 
             <tr>
-                <td><img class="tam-refrigerante" src="/Fotos categorias/Bebidas/refrigerantes diversos.jpg" alt="Bebidas"></td>
+                <td class="tamanho-td-tabela"><img class="tam-imagem" src="/Fotos categorias/Bebidas/refrigerantes diversos.jpg" alt="Bebidas"></td>
                 <td>Coca-Cola / Fanta / Guarana / Schweppes</td>
                 <td>R$4,00 Lata </td>
                 <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
-                <td><img class="tam-suco" src="/Fotos categorias/Bebidas/sucos diversos.jpg" alt="Bebidas"></td>
+                <td class="tamanho-td-tabela"><img class="tam-imagem" src="/Fotos categorias/Bebidas/sucos diversos.jpg" alt="Bebidas"></td>
                 <td>Su-Fresh / Del-vale / Do-bem / Maguari</td>
                 <td>R$6,00 - 500ml </td>
                 <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
-                <td><img src="/Fotos categorias/Bebidas/cervejas diversas.jpg" alt="Bebidas"></td>
-                <td>Itaipava / Skol / Heineken / Budweizer / Brahma</td>
-                <td>R$5,00-Lata / R$8,00-Garrafa </td>
-                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
+                <td class="tamanho-td-tabela"><img cid="tam-imagem-cervejas" src="/Fotos categorias/Bebidas/cervejas diversas.jpg" alt="Bebidas"></td>
+                <td class="centraliza">Itaipava / Skol / Heineken / Budweizer / Brahma</td>
+                <td class="centraliza">R$5,00-Lata / R$8,00-Garrafa </td>
+                <td class="centraliza"><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
             <tr>
-                <td><img src="/Fotos categorias/Bebidas/agua.jpg" alt="Bebidas"></td>
-                <td>Agua mineral</td>
-                <td>R$2,00 s/gás | R$2,70 c/gás </td>
-                <td><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
+                <td class="tamanho-td-tabela"><img id="tam-imagem-agua" src="/Fotos categorias/Bebidas/agua.jpg" alt="Bebidas"></td>
+                <td class="centraliza">Agua mineral</td>
+                <td class="centraliza">R$2,00 s/gás | R$2,70 c/gás </td>
+                <td class="centraliza"><button class="imagem-compra"><img class="imagem-compra" src="./img/compra.png"></button></td>
             </tr>
 
         </table>
